tests/miniJava/neg/006839_mutation.MiniJava
class String { public static void Main ( String [ ] java ) { { } } }
